# preprint-alert-agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
reports/: report-2026-02-19.md  report-2026-02-20.md  report-2026-02-21.md  report-2026-02-23.md  report-2026-02-24.md  report-2026-02-25.md  report-2026-02-26.md  report-2026-02-27.md  report-2026-03-02.md  report-2026-03-03.md  report-2026-03-04.md  report-2026-03-05.md  report-2026-03-06.md  report-2026-03-09.md  report-2026-03-23.md  report-2026-03-24.md  report-2026-03-25.md  report-2026-03-26.md  report-2026-03-27.md  report-2026-03-31.md  report-2026-04-02.md  report-2026-04-06.md  report-2026-04-08.md  report-2026-04-09.md  report-2026-04-10.md  report-2026-04-13.md  report-2026-04-14.md  report-2026-04-15.md
site/: index.html  report-2026-01-29.html  report-2026-01-30.html  report-2026-02-02.html  report-2026-02-19.html  report-2026-02-20.html  report-2026-02-21.html  report-2026-02-22.html  report-2026-02-23.html  report-2026-02-24.html  report-2026-02-25.html  report-2026-02-26.html  report-2026-02-27.html  report-2026-02-28.html  report-2026-03-01.html  report-2026-03-02.html  report-2026-03-03.html  report-2026-03-04.html  report-2026-03-05.html  report-2026-03-06.html  report-2026-03-09.html  report-2026-03-10.html  report-2026-03-11.html  report-2026-03-12.html  report-2026-03-13.html  report-2026-03-16.html  report-2026-03-17.html  report-2026-03-18.html  report-2026-03-19.html  report-2026-03-20.html  report-2026-03-23.html  report-2026-03-24.html  report-2026-03-25.html  report-2026-03-26.html  (+82 more)
(+13 files in other folders)
